Login işlemleri yapıldı

--- a/Project.MVCUI/Views/Register/RegisterNow.cshtml
+++ b/Project.MVCUI/Views/Register/RegisterNow.cshtml
@@ -58,7 +58,7 @@
     <div class="container">
         @using (Html.BeginForm("RegisterNow", "Register", FormMethod.Post, new { @class = "form-signin" }))
         {
-            <h2 class="form-signin-heading">Üye Ol</h2>
+            <h2 class="form-signin-heading">TEKNO CENTER'A ÜYE OL</h2>
             <div class="login-wrap">
                 <p class="font">Kullanıcı bilgileri</p>
                 @Html.ValidationMessageFor(x => x.AppUser.UserName)
