ProductList View'unda düzeltmeler yapıldı

--- a/Project.MVCUI/Areas/Admin/Views/Product/ProductList.cshtml
+++ b/Project.MVCUI/Areas/Admin/Views/Product/ProductList.cshtml
@@ -12,15 +12,15 @@
         <table class="table table-hover">
             <thead>
                 <tr>
-                    <th>Ürün ID</th>
-                    <th>Ürün Ismi</th>
-                    <th>Ürün Fiyatı</th>
-                    <th>Ürün Stok</th>
-                    <th>Ürün Kategorisi</th>
-                    <th>Ürün Resmi</th>
-                    <th class="hidden-phone">Durum</th>
-                    <th class="hidden-phone">Sil</th>
-                    <th class="hidden-phone">Güncelle</th>
+                    <th class="text-center">Ürün ID</th>
+                    <th class="text-center">Ürün Ismi</th>
+                    <th class="text-center">Ürün Fiyatı</th>
+                    <th class="text-center">Ürün Stok</th>
+                    <th class="text-center">Ürün Kategorisi</th>
+                    <th class="text-center">Ürün Resmi</th>
+                    <th class="hidden-phone text-center">Durum</th>
+                    <th class="hidden-phone text-center">Sil</th>
+                    <th class="hidden-phone text-center">Güncelle</th>
                 </tr>
             </thead>
             <tbody>
