--- a/Project.MVCUI/Views/Shopping/ShoppingList.cshtml
+++ b/Project.MVCUI/Views/Shopping/ShoppingList.cshtml
@@ -4,293 +4,152 @@
 }
 
 
-    <!-- page start-->
-    <div class="row">
-        <div class="col-md-3">
-            <section class="panel">
-                <div class="panel-body">
-                    <input type="text" placeholder="Keyword Search" class="form-control">
+<!-- page start-->
+<div class="row">
+    <div class="col-md-3">
+        <section class="panel">
+            <div class="panel-body">
+                <input type="text" placeholder="Ürünlerde Ara" class="form-control" id="search">
+            </div>
+        </section>
+        <section class="panel">
+            <header class="panel-heading">
+                Kategoriler
+            </header>
+            <div class="panel-body">
+                <ul class="nav prod-cat">
+                    @foreach (Category item in Model.Categories)
+                    {
+                        <li>@Html.ActionLink(item.Name, "ShoppingList", new { categoryID = item.ID }, new { @class = "icon-angle-right" })</li>
+                    }
+                </ul>
+            </div>
+        </section>
+        <section class="panel">
+            <header class="panel-heading">
+                Price Range
+            </header>
+            <div class="panel-body sliders">
+                <div id="slider-range" class="slider"></div>
+                <div class="slider-info">
+                    <span id="slider-range-amount"></span>
                 </div>
-            </section>
-            <section class="panel">
-                <header class="panel-heading">
-                    Kategoriler
-                </header>
-                <div class="panel-body">
-                    <ul class="nav prod-cat">
-                        @foreach (Category item in Model.Categories)
+            </div>
+        </section>
+        <section class="panel">
+            <header class="panel-heading">
+                Best Seller
+            </header>
+            <div class="panel-body">
+                <div class="best-seller">
+                    <article class="media">
+                        <a class="pull-left thumb p-thumb">
+                            <img src="img/product1.jpg">
+                        </a>
+                        <div class="media-body">
+                            <a href="#" class=" p-head">Item One Tittle</a>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        </div>
+                    </article>
+                    <article class="media">
+                        <a class="pull-left thumb p-thumb">
+                            <img src="img/product2.png">
+                        </a>
+                        <div class="media-body">
+                            <a href="#" class=" p-head">Item Two Tittle</a>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        </div>
+                    </article>
+                    <article class="media">
+                        <a class="pull-left thumb p-thumb">
+                            <img src="img/product3.png">
+                        </a>
+                        <div class="media-body">
+                            <a href="#" class=" p-head">Item Three Tittle</a>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+    </div>
+    <div class="col-md-9">
+        <section class="panel">
+            <div class="panel-body">
+                <div class="pro-sort">
+                    <label class="pro-lab">Sort By</label>
+                    <select class="styled">
+                        <option>Default Sorting</option>
+                        <option>Popularity</option>
+                        <option>Average Rating</option>
+                        <option>Newness</option>
+                        <option>Price Low to High</option>
+                        <option>Price High to Low</option>
+                    </select>
+                </div>
+                <div class="pro-sort">
+                    <label class="pro-lab">Show</label>
+                    <select class="styled">
+                        <option>Result Per Page</option>
+                        <option>2 Per Page</option>
+                        <option>4 Per Page</option>
+                        <option>6 Per Page</option>
+                        <option>8 Per Page</option>
+                        <option>10 Per Page</option>
+                    </select>
+                </div>
+
+                <div class="pull-right">
+                    <ul class="pagination pagination-sm pro-page-list">
+                        @if (ViewBag.categoryID != null)
                         {
-                            <li>@Html.ActionLink(item.Name, "ShoppingList", new { categoryID = item.ID}, new { @class= "icon-angle-right" })</li>
+                            <li>@Html.PagedListPager(Model.PagedProducts, page => Url.Action("ShoppingList", new { page, categoryID = ViewBag.categoryID }))</li>
+                        }
+                        else
+                        {
+                            <li>@Html.PagedListPager(Model.PagedProducts, page => Url.Action("ShoppingList", new { page }))</li>
                         }
                     </ul>
                 </div>
-            </section>
-            <section class="panel">
-                <header class="panel-heading">
-                    Price Range
-                </header>
-                <div class="panel-body sliders">
-                    <div id="slider-range" class="slider"></div>
-                    <div class="slider-info">
-                        <span id="slider-range-amount"></span>
-                    </div>
-                </div>
-            </section>
-            <section class="panel">
-                <header class="panel-heading">
-                    Best Seller
-                </header>
-                <div class="panel-body">
-                    <div class="best-seller">
-                        <article class="media">
-                            <a class="pull-left thumb p-thumb">
-                                <img src="img/product1.jpg">
-                            </a>
-                            <div class="media-body">
-                                <a href="#" class=" p-head">Item One Tittle</a>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            </div>
-                        </article>
-                        <article class="media">
-                            <a class="pull-left thumb p-thumb">
-                                <img src="img/product2.png">
-                            </a>
-                            <div class="media-body">
-                                <a href="#" class=" p-head">Item Two Tittle</a>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            </div>
-                        </article>
-                        <article class="media">
-                            <a class="pull-left thumb p-thumb">
-                                <img src="img/product3.png">
-                            </a>
-                            <div class="media-body">
-                                <a href="#" class=" p-head">Item Three Tittle</a>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            </div>
-                        </article>
-                    </div>
-                </div>
-            </section>
-        </div>
-        <div class="col-md-9">
-            <section class="panel">
-                <div class="panel-body">
-                    <div class="pro-sort">
-                        <label class="pro-lab">Sort By</label>
-                        <select class="styled">
-                            <option>Default Sorting</option>
-                            <option>Popularity</option>
-                            <option>Average Rating</option>
-                            <option>Newness</option>
-                            <option>Price Low to High</option>
-                            <option>Price High to Low</option>
-                        </select>
-                    </div>
-                    <div class="pro-sort">
-                        <label class="pro-lab">Show</label>
-                        <select class="styled">
-                            <option>Result Per Page</option>
-                            <option>2 Per Page</option>
-                            <option>4 Per Page</option>
-                            <option>6 Per Page</option>
-                            <option>8 Per Page</option>
-                            <option>10 Per Page</option>
-                        </select>
-                    </div>
-
-                    <div class="pull-right">
-                        <ul class="pagination pagination-sm pro-page-list">
-                            @if (ViewBag.categoryID != null)
-                            {
-                                <li>@Html.PagedListPager(Model.PagedProducts, page => Url.Action("ShoppingList", new { page, categoryID=ViewBag.categoryID }))</li>
-                            }
-                            else
-                            {
-                                <li>@Html.PagedListPager(Model.PagedProducts, page => Url.Action("ShoppingList", new { page }))</li>
-                            }
-                        </ul>
-                    </div>
-                </div>
-            </section>
-
-            <div class="row product-list">
-                <div class="col-md-4">
-                    <section class="panel">
-                        @foreach (Product item in Model.PagedProducts)
-                        {
-
-                        }
-                        <div class="pro-img-box">
-                            <img src="img/product-list/pro-1.jpg" alt="" />
-                            <a href="#" class="adtocart">
-                                <i class="icon-shopping-cart"></i>
-                            </a>
-                        </div>
-
-                        <div class="panel-body text-center">
-                            <h4>
-                                <a href="#" class="pro-title">
-                                    Leopard Shirt Dress
-                                </a>
-                            </h4>
-                            <p class="price">$300.00</p>
-                        </div>
-                    </section>
-                </div>
-                <div class="col-md-4">
-                    <section class="panel">
-                        <div class="pro-img-box">
-                            <img src="img/product-list/pro1.jpg" alt="" />
-                            <a href="#" class="adtocart">
-                                <i class="icon-shopping-cart"></i>
-                            </a>
-                        </div>
-
-                        <div class="panel-body text-center">
-                            <h4>
-                                <a href="#" class="pro-title">
-                                    Leopard Shirt Dress
-                                </a>
-                            </h4>
-                            <p class="price">$300.00</p>
-                        </div>
-                    </section>
-                </div>
-                <div class="col-md-4">
-                    <section class="panel">
-                        <div class="pro-img-box">
-                            <img src="img/product-list/pro2.jpg" alt="" />
-                            <a href="#" class="adtocart">
-                                <i class="icon-shopping-cart"></i>
-                            </a>
-                        </div>
-
-                        <div class="panel-body text-center">
-                            <h4>
-                                <a href="#" class="pro-title">
-                                    Leopard Shirt Dress
-                                </a>
-                            </h4>
-                            <p class="price">$300.00</p>
-                        </div>
-                    </section>
-                </div>
-                <div class="col-md-4">
-                    <section class="panel">
-                        <div class="pro-img-box">
-                            <img src="img/product-list/pro3.jpg" alt="" />
-                            <a href="#" class="adtocart">
-                                <i class="icon-shopping-cart"></i>
-                            </a>
-                        </div>
-
-                        <div class="panel-body text-center">
-                            <h4>
-                                <a href="#" class="pro-title">
-                                    Leopard Shirt Dress
-                                </a>
-                            </h4>
-                            <p class="price">$300.00</p>
-                        </div>
-                    </section>
-                </div>
-                <div class="col-md-4">
-                    <section class="panel">
-                        <div class="pro-img-box">
-                            <img src="img/product-list/pro-1.jpg" alt="" />
-                            <a href="#" class="adtocart">
-                                <i class="icon-shopping-cart"></i>
-                            </a>
-                        </div>
-
-                        <div class="panel-body text-center">
-                            <h4>
-                                <a href="#" class="pro-title">
-                                    Leopard Shirt Dress
-                                </a>
-                            </h4>
-                            <p class="price">$300.00</p>
-                        </div>
-                    </section>
-                </div>
-                <div class="col-md-4">
-                    <section class="panel">
-                        <div class="pro-img-box">
-                            <img src="img/product-list/pro2.jpg" alt="" />
-                            <a href="#" class="adtocart">
-                                <i class="icon-shopping-cart"></i>
-                            </a>
-                        </div>
-
-                        <div class="panel-body text-center">
-                            <h4>
-                                <a href="#" class="pro-title">
-                                    Leopard Shirt Dress
-                                </a>
-                            </h4>
-                            <p class="price">$300.00</p>
-                        </div>
-                    </section>
-                </div>
-                <div class="col-md-4">
-                    <section class="panel">
-                        <div class="pro-img-box">
-                            <img src="img/product-list/pro1.jpg" alt="" />
-                            <a href="#" class="adtocart">
-                                <i class="icon-shopping-cart"></i>
-                            </a>
-                        </div>
-
-                        <div class="panel-body text-center">
-                            <h4>
-                                <a href="#" class="pro-title">
-                                    Leopard Shirt Dress
-                                </a>
-                            </h4>
-                            <p class="price">$300.00</p>
-                        </div>
-                    </section>
-                </div>
-                <div class="col-md-4">
-                    <section class="panel">
-                        <div class="pro-img-box">
-                            <img src="img/product-list/pro3.jpg" alt="" />
-                            <a href="#" class="adtocart">
-                                <i class="icon-shopping-cart"></i>
-                            </a>
-                        </div>
-
-                        <div class="panel-body text-center">
-                            <h4>
-                                <a href="#" class="pro-title">
-                                    Leopard Shirt Dress
-                                </a>
-                            </h4>
-                            <p class="price">$300.00</p>
-                        </div>
-                    </section>
-                </div>
-                <div class="col-md-4">
-                    <section class="panel">
-                        <div class="pro-img-box">
-                            <img src="img/product-list/pro-1.jpg" alt="" />
-                            <a href="#" class="adtocart">
-                                <i class="icon-shopping-cart"></i>
-                            </a>
-                        </div>
-
-                        <div class="panel-body text-center">
-                            <h4>
-                                <a href="#" class="pro-title">
-                                    Leopard Shirt Dress
-                                </a>
-                            </h4>
-                            <p class="price">$300.00</p>
-                        </div>
-                    </section>
-                </div>
             </div>
+        </section>
+
+        <div class="row product-list" >
+            @foreach (Product item in Model.PagedProducts)
+            {
+                <div class="col-md-4" id="div">
+                    <section class="panel">
+                        <div class="pro-img-box">
+                            <img src="@item.ImagePath" alt="Resim Yok" title="@item.Name" />
+                            <a href="@Url.Action("AddToCart", new { id=item.ID})" class="adtocart">
+                                <i class="icon-shopping-cart"></i>
+                            </a>
+                        </div>
+
+                        <div class="panel-body text-center">
+                            <h4>
+                                <a href="@Url.Action("ProductDetail", new { id=item.ID})" class="pro-title">
+                                    @item.Name
+                                </a>
+                            </h4>
+                            <p class="price">@item.UnitPrice.ToString("C2")</p>
+                        </div>
+                    </section>
+                </div>
+            }
         </div>
     </div>
-    <!-- page end-->
+</div>
+
+<script>
+
+    $(document).ready(function () {
+        $("#search").on("keyup", function () {
+            var value = $(this).val().toLowerCase();
+            $("#div section").filter(function () {
+                $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+            });
+        });
+    });
+
+</script>
