ConfirmOrder View'su tamamlandı

--- a/Project.MVCUI/Views/Shared/_Layout.cshtml
+++ b/Project.MVCUI/Views/Shared/_Layout.cshtml
@@ -23,9 +23,12 @@
 
     <script src="~/OuterTools/js/jquery.js"></script>
     <script src="~/OuterTools/js/jquery-1.8.3.min.js"></script>
+    <script src="~/OuterTools/js/jquery.stepy.js"></script>
     <script src="~/OuterTools/js/bootstrap.min.js"></script>
     <script src="~/Scripts/jquery.validate.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
+
+
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 tooltipss and media queries -->
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
@@ -479,6 +482,8 @@
     <script src="~/OuterTools/js/sparkline-chart.js"></script>
     <script src="~/OuterTools/js/easy-pie-chart.js"></script>
     <script src="~/OuterTools/js/count.js"></script>
+
+
 
     <script>
 
