--- a/Project.MVCUI/Views/Shopping/ShoppingList.cshtml
+++ b/Project.MVCUI/Views/Shopping/ShoppingList.cshtml
@@ -3,6 +3,13 @@
     ViewBag.Title = "ShoppingList";
 }
 
+<div class="alert-danger text-center" style="font-size:large">
+    @TempData["hata"]
+</div>
+
+<div class="alert-success text-center" style="font-size:large">
+    @TempData["odeme"]
+</div>
 
 <div class="row">
     <div class="col-md-3">
