--- a/Project.MVCUI/Views/Shared/_Layout.cshtml
+++ b/Project.MVCUI/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
                             <ul class="dropdown-menu extended logout">
                                 <div class="log-arrow-up"></div>
                                 <li><a href="@Url.Action("CardPage", "Shopping")"><i class=" icon-shopping-cart"></i>Sepet</a></li>
-                                <li><a href="@Url.Action("Profile", "Home")"><i class="icon-cog"></i> Profil</a></li>
+                                <li><a href="@Url.Action("ProfileDetail", "Home")"><i class="icon-cog"></i> Profil</a></li>
                                 <li><a href="#"><i class="icon-bell-alt"></i> Notification</a></li>
                                 <li><a href="@Url.Action("LogOut", "Home")"><i class="icon-signout"></i> Çıkış Yap</a></li>
                             </ul>
