--- a/Project.MVCUI/Views/Home/EditProfile.cshtml
+++ b/Project.MVCUI/Views/Home/EditProfile.cshtml
@@ -4,7 +4,6 @@
 }
 
 <section id="container" class="">
-    <!-- page start-->
     <div class="row">
         <aside class="profile-nav col-lg-3">
             <section class="panel">
@@ -19,6 +18,7 @@
                 <ul class="nav nav-pills nav-stacked">
                     <li><a href="@Url.Action("ProfileDetail")"> <i class="icon-user"></i> Profil</a></li>
                     <li class="active"><a href="@Url.Action("EditProfile", new { id=Model.User.ID})"> <i class="icon-edit"></i> Profili düzenle</a></li>
+                    <li><a href="@Url.Action("Addresses", "Address")"> <i class="icon-road"></i> Adresler</a></li>
                 </ul>
 
             </section>
@@ -108,10 +108,8 @@
             </section>
         </aside>
     </div>
-
-    <!-- page end-->
 </section>
-<!--main content end-->
+
 <script>
 
     $(".knob").knob();
