--- a/Project.MVCUI/Views/Shared/_Layout.cshtml
+++ b/Project.MVCUI/Views/Shared/_Layout.cshtml
@@ -76,6 +76,13 @@
                     </ul>
                     <!--search & user info end-->
                 }
+                else
+                {
+                    <div class="nav pull-right top-menu">
+                        @Html.ActionLink("Giriş Yap", "Login", "Home", null, new { @class="btn btn-round btn-info"})
+                        @Html.ActionLink("Üye Ol", "RegisterNow", "Register", null, new { @class="btn btn-round btn-info"})
+                    </div>
+                }
             </div>
         </header>
         <!--header end-->
@@ -85,12 +92,64 @@
                 <!-- sidebar menu start-->
                 <ul class="sidebar-menu" id="nav-accordion">
                     <li>
-                        <a class="active" href="index.html">
-                            <i class="icon-dashboard"></i>
-                            <span>Dashboard</span>
+                        <a href="@Url.Action("ShoppingList", "Shopping")">
+                            <i class="icon-th-list"></i>
+                            <span>Ürünler</span>
                         </a>
                     </li>
 
+                    <li>
+                        <a href="@Url.Action("CardPage", "Shopping")">
+                            <i class="icon-shopping-cart"></i>
+                            <span>Sepet</span>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="@Url.Action("CargoTracking", "Home")">
+                            <i class="icon-dropbox"></i>
+                            <span>Kargo Takip</span>
+                        </a>
+                    </li>
+
+                    @if (Session["member"] != null || Session["admin"] != null)
+                    {
+                        <li>
+                            <a href="@Url.Action("Addresses", "Address")">
+                                <i class="icon-road"></i>
+                                <span>Adres</span>
+                            </a>
+                        </li>
+
+
+                        <li>
+                            <a href="@Url.Action("ProfileDetail", "Home")">
+                                <i class="icon-cog"></i>
+                                <span>Profil</span>
+                            </a>
+                        </li>
+
+
+                        <li>
+                            <a href="@Url.Action("LogOut", "Home")">
+                                <i class="icon-signout"></i>
+                                <span>Çıkış Yap</span>
+                            </a>
+                        </li>
+                    }
+                    else
+                    {
+                        <li class="sub-menu">
+                            <a href="javascript:;">
+                                <i class="icon-signin"></i>
+                                <span>Giriş Yap</span>
+                            </a>
+                            <ul class="sub">
+                                <li><a href="@Url.Action("Login", "Home")">Giriş Yap</a></li>
+                                <li><a href="@Url.Action("RegisterNow", "Register")">Üye Ol</a></li>
+                            </ul>
+                        </li>
+                    }
                     <li class="sub-menu">
                         <a href="javascript:;">
                             <i class="icon-laptop"></i>
