--- a/Project.MVCUI/Views/Shopping/ShoppingList.cshtml
+++ b/Project.MVCUI/Views/Shopping/ShoppingList.cshtml
@@ -81,7 +81,7 @@
                 {
                     <li id="li">
                         <div class="col-md-4" id="div" style="width:427px; height:554px">
-                            <section class="panel">
+                            <section class="panel" style="width:400px; height:540px">
                                 <div class="pro-img-box">
                                     <a href="@Url.Action("ProductDetail", new { id=item.ID})"><img src="@item.ImagePath" alt="Resim Yok" title="@item.Name" width="397" height="397"/></a>
                                     <a href="@Url.Action("AddToCart", new { id=item.ID})" class="adtocart">
