--- a/Project.MVCUI/Views/Shared/_Layout.cshtml
+++ b/Project.MVCUI/Views/Shared/_Layout.cshtml
@@ -15,6 +15,10 @@
     <link href="~/OuterTools/css/bootstrap-reset.css" rel="stylesheet">
     <!--external css-->
     <link href="~/OuterTools/assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
+
+    <link href="~/OuterTools/assets/advanced-datatable/media/css/demo_table.css" rel="stylesheet" />
+    <link href="~/OuterTools/assets/advanced-datatable/media/css/demo_page.css" rel="stylesheet" />
+
     <link href="~/OuterTools/assets/jquery-easy-pie-chart/jquery.easy-pie-chart.css" rel="stylesheet" type="text/css" media="screen" />
     <link rel="stylesheet" href="~/OuterTools/css/owl.carousel.css" type="text/css">
     <!-- Custom styles for this template -->
@@ -29,6 +33,9 @@
     <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
 
     <script src="~/OuterTools/assets/jquery-knob/js/jquery.knob.js"></script>
+
+    <script src="~/OuterTools/assets/advanced-datatable/media/js/jquery.js"></script>
+    <script src="~/OuterTools/assets/advanced-datatable/media/js/jquery.dataTables.js"></script>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 tooltipss and media queries -->
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
