_Layout sorunu çözüldü

--- a/Project.MVCUI/Views/Shared/_Layout.cshtml
+++ b/Project.MVCUI/Views/Shared/_Layout.cshtml
@@ -16,8 +16,7 @@
     <!--external css-->
     <link href="~/OuterTools/assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
 
-    <link href="~/OuterTools/assets/advanced-datatable/media/css/demo_table.css" rel="stylesheet" />
-    <link href="~/OuterTools/assets/advanced-datatable/media/css/demo_page.css" rel="stylesheet" />
+
 
     <link href="~/OuterTools/assets/jquery-easy-pie-chart/jquery.easy-pie-chart.css" rel="stylesheet" type="text/css" media="screen" />
     <link rel="stylesheet" href="~/OuterTools/css/owl.carousel.css" type="text/css">
@@ -34,8 +33,7 @@
 
     <script src="~/OuterTools/assets/jquery-knob/js/jquery.knob.js"></script>
 
-    <script src="~/OuterTools/assets/advanced-datatable/media/js/jquery.js"></script>
-    <script src="~/OuterTools/assets/advanced-datatable/media/js/jquery.dataTables.js"></script>
+
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 tooltipss and media queries -->
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
@@ -342,7 +340,7 @@
 
 
 
-    <script class="include" type="text/javascript" src="~/OuterTools/js/jquery.dcjqaccordion.2.7.js"></script>
+    @*<script class="include" type="text/javascript" src="~/OuterTools/js/jquery.dcjqaccordion.2.7.js"></script>*@
 
     <!--common script for all pages-->
     <script src="~/OuterTools/js/common-scripts.js"></script>
