--- a/Project.MVCUI/Areas/Admin/Views/Category/CategoryList.cshtml
+++ b/Project.MVCUI/Areas/Admin/Views/Category/CategoryList.cshtml
@@ -17,9 +17,10 @@
                     <th>Kategori ID</th>
                     <th>Kategori Adı</th>
                     <th class="hidden-phone">Kategori Açıklaması</th>
-                    <th class="hidden-phone">Durum</th>
-                    <th class="center hidden-phone; text-center">Güncelle</th>
-                    <th class="center hidden-phone; text-center">Sil</th>
+                    <th class="text-center hidden-phone">Durum</th>
+                    <th class="text-center hidden-phone">Ürünleri</th>
+                    <th class="text-center hidden-phone; text-center">Güncelle</th>
+                    <th class="text-center hidden-phone; text-center">Sil</th>
                 </tr>
             </thead>
             <tbody>
@@ -29,9 +30,10 @@
                         <td>@item.ID</td>
                         <td>@item.Name</td>
                         <td class="hidden-phone">@item.Description</td>
-                        <td class="center hidden-phone">@item.Status</td>
-                        <td class="center hidden-phone">@Html.ActionLink("Güncelle", "UpdateCategory", new { id = item.ID }, new { @class = "btn btn-warning" })</td>
-                        <td class="center hidden-phone">@Html.ActionLink("Sil", "DeleteCategory", new { id = item.ID }, new { @class = "btn btn-danger" })</td>
+                        <td class="text-center hidden-phone">@item.Status</td>
+                        <td class="text-center hidden-phone">@Html.ActionLink("Göz at", "ProductList", new { id=item.ID, area="admin", controller="product"}, new { @class="btn btn-info"})</td>
+                        <td class="text-center hidden-phone">@Html.ActionLink("Güncelle", "UpdateCategory", new { id = item.ID }, new { @class = "btn btn-warning" })</td>
+                        <td class="text-center hidden-phone">@Html.ActionLink("Sil", "DeleteCategory", new { id = item.ID }, new { @class = "btn btn-danger" })</td>
                     </tr>
                 }
             </tbody>
@@ -39,18 +41,3 @@
 
     </div>
 </div>
-
-<script src="~/Areas/Admin/AdminContent/CategoryDTJ.js"></script>
-
-<script>
-
-    $(document).ready(function () {
-        $("#search").on("keyup", function () {
-            var value = $(this).val().toLowerCase();
-            $("#ul li").filter(function () {
-                $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
-            });
-        });
-    });
-
-</script>
