--- a/Project.MVCUI/Areas/Admin/Views/Category/CategoryList.cshtml
+++ b/Project.MVCUI/Areas/Admin/Views/Category/CategoryList.cshtml
@@ -5,9 +5,12 @@
 
 <div class="text-center" style="font-family:'Agency FB'; font-size:x-large">Kategoriler</div>
 
-<div><h4>Kategori eklemek için @Html.ActionLink("tıklayınız", "AddCategory")</h4></div>
+<div class="panel-body"><h4>Kategori eklemek için @Html.ActionLink("tıklayınız", "AddCategory")</h4></div>
 
-<h3 style="color:green" class="text-center">@TempData["merhaba"]</h3> @*Admin giriş karşılama*@
+<div class="panel-body col-lg-4">
+    <input type="text" placeholder="Kategorilerde Ara" class="form-control" id="search">
+</div>
+
 
 <div class="panel-body">
     <div class="adv-table">
@@ -23,15 +26,15 @@
                     <th class="text-center hidden-phone; text-center">Sil</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="body">
                 @foreach (Category item in Model.Categories)
                 {
-                    <tr class="gradeX">
+                    <tr class="gradeX" id="tr">
                         <td>@item.ID</td>
                         <td>@item.Name</td>
                         <td class="hidden-phone">@item.Description</td>
                         <td class="text-center hidden-phone">@item.Status</td>
-                        <td class="text-center hidden-phone">@Html.ActionLink("Göz at", "ProductList", new { id=item.ID, area="admin", controller="product"}, new { @class="btn btn-info"})</td>
+                        <td class="text-center hidden-phone">@Html.ActionLink("Göz at", "ProductList", new { id = item.ID, area = "admin", controller = "product" }, new { @class = "btn btn-info" })</td>
                         <td class="text-center hidden-phone">@Html.ActionLink("Güncelle", "UpdateCategory", new { id = item.ID }, new { @class = "btn btn-warning" })</td>
                         <td class="text-center hidden-phone">@Html.ActionLink("Sil", "DeleteCategory", new { id = item.ID }, new { @class = "btn btn-danger" })</td>
                     </tr>
@@ -41,3 +44,16 @@
 
     </div>
 </div>
+
+<script>
+
+    $(document).ready(function () {
+        $("#search").on("keyup", function () {
+            var value = $(this).val().toLowerCase();
+            $("#body tr").filter(function () {
+                $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+            });
+        });
+    });
+
+</script>
