--- a/Project.MVCUI/Views/Address/Addresses.cshtml
+++ b/Project.MVCUI/Views/Address/Addresses.cshtml
@@ -16,14 +16,14 @@
                 </div>
 
                 <ul class="nav nav-pills nav-stacked">
-                    <li><a href="@Url.Action("ProfileDetail", "Home")"> <i class="icon-user"></i> Profil</a></li>
-                    <li><a href="@Url.Action("EditProfile", "Home", new { id=Model.User.ID})"> <i class="icon-edit"></i> Profili düzenle</a></li>
-                    <li class="active"><a href="@Url.Action("Addresses")"> <i class="icon-road"></i> Adresler</a></li>
+                    <li><a href="@Url.Action("ProfileDetail", "Home", new { area=""})"> <i class="icon-user"></i> Profil</a></li>
+                    <li><a href="@Url.Action("EditProfile", "Home", new { id=Model.User.ID, area=""})"> <i class="icon-edit"></i> Profili düzenle</a></li>
+                    <li class="active"><a href="@Url.Action("Addresses", new { area=""})"> <i class="icon-road"></i> Adresler</a></li>
                 </ul>
 
             </section>
             <div style="font-size:medium">
-                <b>Yeni bir adres eklemek için lütfen @Html.ActionLink("tıklayınız", "AddAddress", "Address")</b>
+                <b>Yeni bir adres eklemek için lütfen @Html.ActionLink("tıklayınız", "AddAddress", new { @controller= "Address", area="" })</b>
             </div>
         </aside>
 
@@ -42,9 +42,9 @@
                                 <label class="control-label col-lg-2" style="font-size:large">@item.Name: </label>
                                 <div class="col-lg-10" style="font-size:medium">
                                     @item.FullAddress
-                                    @Html.ActionLink("Sil", "DeleteAddress", new { id = item.ID }, new { @class = "btn btn-round btn-danger pull-right" })
+                                    @Html.ActionLink("Sil", "DeleteAddress", new { id = item.ID, area="" }, new { @class = "btn btn-round btn-danger pull-right" })
                                     &nbsp;
-                                    @Html.ActionLink("Güncelle", "UpdateAddress", new { id = item.ID }, new { @class = "btn btn-round btn-warning pull-right" })
+                                    @Html.ActionLink("Güncelle", "UpdateAddress", new { id = item.ID, area="" }, new { @class = "btn btn-round btn-warning pull-right" })
                                 </div>
                             </div>
 
