--- a/Project.MVCUI/Areas/Admin/Views/Category/UpdateCategory.cshtml
+++ b/Project.MVCUI/Areas/Admin/Views/Category/UpdateCategory.cshtml
@@ -6,6 +6,11 @@
     .genislik {
         width: 300px;
     }
+
+    .field-validation-error {
+        color: red;
+        font-weight: bolder;
+    }
 </style>
 
 @using (Html.BeginForm())
@@ -21,6 +26,7 @@
                                 <div class="form-group">
                                     <label class="col-sm-2 control-label">Isim</label>
                                     <div class="col-sm-10">
+                                        @Html.ValidationMessageFor(x => x.Category.Name)
                                         @Html.TextBoxFor(x => x.Category.Name, new { @class = "form-control genislik" })
                                     </div>
                                 </div>
@@ -29,6 +35,7 @@
                                 <div class="form-group">
                                     <label class="col-sm-2 control-label">Açıklama</label>
                                     <div class="col-sm-10">
+                                        @Html.ValidationMessageFor(x => x.Category.Description)
                                         @Html.TextBoxFor(x => x.Category.Description, new { @class = "form-control genislik" })
                                     </div>
                                 </div>
