--- a/Project.MVCUI/Areas/Admin/Views/Product/AddProduct.cshtml
+++ b/Project.MVCUI/Areas/Admin/Views/Product/AddProduct.cshtml
@@ -7,6 +7,11 @@
     .genislik {
         width: 300px;
     }
+
+    .field-validation-error {
+        color: red;
+        font-weight: bolder;
+    }
 </style>
 
 @using (Html.BeginForm("AddProduct", "Product", FormMethod.Post, new { enctype = "multipart/form-data" }))
@@ -21,6 +26,7 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label">İsim</label>
                         <div class="col-sm-10">
+                            @Html.ValidationMessageFor(x => x.Product.Name)
                             @Html.TextBoxFor(x => x.Product.Name, new { @class = "form-control genislik" })
                         </div>
                     </div>
@@ -30,6 +36,7 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Fiyat</label>
                         <div class="col-sm-10">
+                            @Html.ValidationMessageFor(x => x.Product.UnitPrice)
                             @Html.TextBoxFor(x => x.Product.UnitPrice, new { @class = "form-control genislik" })
                         </div>
                     </div>
@@ -38,6 +45,7 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Stok</label>
                         <div class="col-sm-10">
+                            @Html.ValidationMessageFor(x => x.Product.UnitInStock)
                             @Html.TextBoxFor(x => x.Product.UnitInStock, new { @class = "form-control genislik" })
                         </div>
                     </div>
@@ -46,7 +54,8 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Kategori</label>
                         <div class="col-sm-10">
-                            @Html.DropDownListFor(x => x.Product.CategoryID, new SelectList(Model.Categories, "ID", "Name"), "Lütfen Seçiniz")
+                            @Html.ValidationMessageFor(x => x.Product.CategoryID)
+                            @Html.DropDownListFor(x => x.Product.CategoryID, new SelectList(Model.Categories, "ID", "Name"), "Lütfen Seçiniz", new { @class="form-control genislik"})
                         </div>
                     </div>
 
@@ -54,13 +63,13 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Resim</label>
                         <div class="col-sm-10">
-                            <input type="file" name="resim" class="form-control genislik" />
+                            <input type="file" name="image" class="form-control genislik" />
                         </div>
                     </div>
 
                     <br /><br /><br />
                     <div class="form-group">
-                       <label class="col-sm-2 control-label"></label>
+                        <label class="col-sm-2 control-label"></label>
                         <div class="col-sm-10">
                             <button class="btn btn-primary">
                                 Ürün Ekle
