--- a/Project.MVCUI/Areas/Admin/Views/Product/UpdateProduct.cshtml
+++ b/Project.MVCUI/Areas/Admin/Views/Product/UpdateProduct.cshtml
@@ -8,6 +8,11 @@
     .genislik {
         width: 300px;
     }
+
+    .field-validation-error {
+        color: red;
+        font-weight: bolder;
+    }
 </style>
 
 @using (Html.BeginForm())
@@ -23,6 +28,7 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Isim</label>
                         <div class="col-sm-10">
+                            @Html.ValidationMessageFor(x => x.Product.Name)
                             @Html.TextBoxFor(x => x.Product.Name, new { @class = "form-control genislik" })
                         </div>
                     </div>
@@ -31,6 +37,7 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Fiyat</label>
                         <div class="col-sm-10">
+                            @Html.ValidationMessageFor(x => x.Product.UnitPrice)
                             @Html.TextBoxFor(x => x.Product.UnitPrice, new { @class = "form-control genislik" })
                         </div>
                     </div>
@@ -39,6 +46,7 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Stok</label>
                         <div class="col-sm-10">
+                            @Html.ValidationMessageFor(x => x.Product.UnitInStock)
                             @Html.TextBoxFor(x => x.Product.UnitInStock, new { @class = "form-control genislik" })
                         </div>
                     </div>
@@ -48,6 +56,7 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Kategori</label>
                         <div class="col-sm-10">
+                            @Html.ValidationMessageFor(x => x.Product.CategoryID)
                             @Html.DropDownListFor(x => x.Product.CategoryID, new SelectList(Model.Categories, "ID", "Name"), "Lutfen Seçiniz", new { @class = "form-control genislik" })
                         </div>
                     </div>
