--- a/Project.MVCUI/Views/Shared/_Layout.cshtml
+++ b/Project.MVCUI/Views/Shared/_Layout.cshtml
@@ -72,7 +72,7 @@
                                 <div class="log-arrow-up"></div>
                                 <li><a href="@Url.Action("CardPage", new { @controller="Shopping", area=""})"><i class=" icon-shopping-cart"></i>Sepet</a></li>
                                 <li><a href="@Url.Action("ProfileDetail", new { @controller="Home", area=""})"><i class="icon-cog"></i> Profil</a></li>
-                                <li><a href="#"><i class="icon-bell-alt"></i> Notification</a></li>
+                                <li><a href="@Url.Action("Addresses", new { @controller="Address", area=""})"><i class="icon-road"></i> Adreslerim</a></li>
                                 <li><a href="@Url.Action("LogOut", new { @controller="Home", area=""})"><i class="icon-signout"></i> Çıkış Yap</a></li>
                             </ul>
                         </li>
