--- a/Project.MVCUI/Views/Shopping/ShoppingList.cshtml
+++ b/Project.MVCUI/Views/Shopping/ShoppingList.cshtml
@@ -5,6 +5,7 @@
 
 <div class="alert-danger text-center" style="font-size:large">
     @TempData["hata"]
+    @TempData["giris"]
 </div>
 
 <div class="alert-success text-center" style="font-size:large">
